finished implementing endpoints for recipes, categories and favorites.
