# app.js
@@ -7,16 +7,17 @@ import "./db/sequelize.js";
 
 import authRouter from "./routes/authRouter.js";
 import usersRouter from "./routes/usersRouter.js";
-// import categoryRouter from "./routes/categoriesRouter.js";
+import categoriesRouter from "./routes/categoriesRouter.js";
 // import areasRouter from "./routes/areasRouter.js";
 // import ingredientRouter from "./routes/ingredientsRouter.js";
 import testimonialRouter from "./routes/testimonialsRouter.js";
-// import recipeRouter from "./routes/recipesRouter.js";
+import recipesRouter from "./routes/recipesRouter.js";
+import favoritesRouter from "./routes/favoritesRouter.js";
 
 import notFoundHandler from "./middlewares/notFoundHandler.js";
 import errorHandler from "./middlewares/errorHandler.js";
 
-import { swaggerDocs } from "./config/swagger.js";
+import {swaggerDocs} from "./config/swagger.js";
 
 const app = express();
 
@@ -27,11 +28,12 @@ app.use(express.static("public"));
 
 app.use("/api/auth", authRouter);
 app.use("/api/users", usersRouter);
-// app.use("/api/categories", categoryRouter);
+app.use("/api/categories", categoriesRouter);
 // app.use("/api/areas", areasRouter);
 // app.use("/api/ingredients", ingredientRouter);
 app.use("/api/testimonials", testimonialRouter);
-// app.use("/api/recipes", recipeRouter);
+app.use("/api/recipes", recipesRouter);
+app.use("/api/favorites", favoritesRouter);
 
 // Swagger docs
 swaggerDocs(app);
