# routes/categoriesRouter.js
@@ -1,0 +1,8 @@
+import express from "express";
+import * as categoriesController from "../controllers/categoriesController.js";
+
+const router = express.Router();
+
+router.get("/", categoriesController.getCategories);
+
+export default router;
